deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catracker
  labels:
    uri: catracker.eu
spec:
  selector:
    matchLabels:
      uri: catracker.eu
  template:
    metadata:
      labels:
        uri: catracker.eu
    spec:
      containers:
        - name: http
          imagePullPolicy: Always
          image: eblovich/catracker-http:${APP_VERSION}
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10002
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/cache/nginx
              name: cache-http
        - name: app
          imagePullPolicy: Always
          image: eblovich/catracker-service:${APP_VERSION}
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10002
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 1G
            requests:
              memory: 512Mi
      volumes:
        - name: cache
          emptyDir: {}
        - name: cache-http
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: catracker-service
spec:
  selector:
    uri: catracker.eu
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catracker-ingress
  labels:
    uri: catracker.eu
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "True"
spec:
  rules:
    - host: catracker.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catracker-service
                port:
                  number: 8080
  tls:
    - hosts:
        - catracker.eu
      secretName:  catracker-tls
